--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,6 +1,26 @@
 .container {
+    align-items: center;
     color: #FFFEFE;
+    display: flex;
     height: 100%;
     margin: 0 auto;
     max-width: 1200px;
+    padding: 0 5px;
+}
+
+.branding {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+}
+
+.branding-main-text {
+    display: flex;
+    letter-spacing: 15px;
+    font-size: 32px;
+}
+
+.branding-about-text {
+    font-size: 12px;
 }
