--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -3,6 +3,7 @@
     color: #FFFEFE;
     display: flex;
     height: 100%;
+    justify-content: space-between;
     margin: 0 auto;
     max-width: 1200px;
     padding: 0 5px;
@@ -23,4 +24,14 @@
 
 .branding-about-text {
     font-size: 12px;
+}
+
+.nav-menu-bar {
+    background-color: #fffefe;
+    height: 4px;
+    width: 35px;
+}
+
+.nav-menu-bar:nth-child(2) {
+    margin: 8px 0;
 }
